<package format="2">
  <name>ros_unity_endpoint</name>
  <version>0.0.1</version>
  <description>ROS Unity Endpoint</description>
  <maintainer email="aluoqiwen@outlook.com">WintBit</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ros_tcp_endpoint</exec_depend>

  <export>

  </export>
</package>
